Create playlists and copy tracks from current playlist